--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/hoxton-one/deepstream.io-client-specs#readme",
   "devDependencies": {
     "cucumber": "^0.10.3",
-    "deepstream.io-client-js": "latest"
+    "deepstream.io-client-js": "beta"
   },
   "dependencies": {
     "sinon": "^1.17.2"
