--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepstream.io-client-specs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A suite of Gherkin specs to ensure protocol support of clients",
   "main": "index.js",
   "scripts": {
@@ -11,14 +11,14 @@
     "url": "git@github.com:deepstreamIO/deepstream.io-client-specs.git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/hoxton-one/deepstream.io-client-specs/issues"
   },
   "homepage": "https://github.com/hoxton-one/deepstream.io-client-specs#readme",
   "devDependencies": {
     "cucumber": "^1.0.0",
-    "deepstream.io-client-js": "beta"
+    "deepstream.io-client-js": "latest"
   },
   "dependencies": {
     "sinon": "^1.17.2"
